--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
+html, body {
+	margin:0;
+	padding: 0;
+}
+
+#actionbar {
+	width: 100%;
+	height: 30px;
+	background: grey;
+}
+
 #tools, #layers {
 	height: 100%;
 }
