--- a/css/main.css
+++ b/css/main.css
@@ -35,14 +35,46 @@ html, body {
 
 #layers {
 	float: right;
-	width: 100px;
+	width: 233px;
 }
 
 	#layers ul li {
 		list-style: none;
-		padding: 10px 20px;
+		height: 56px;
+		line-height: 56px;
+		padding-left: 10px;
 		background-color: lightgrey;
+		position: relative;
 	}
+
+		#layers a {
+			display: block;
+			text-decoration: none;
+			color: inherit;
+			height: 100%;
+		}
+
+		#layers li img {
+			width: 20px;
+			height:20px;
+			margin-top: 18px;
+			float: right;
+		}
+
+		.usersIconWrap {
+			position:absolute;
+			right:0;
+			top:0;
+			height: 100px;
+			width: 233px;
+			padding-right: 20px;
+		}
+
+		#layers li p {
+			margin: 0;
+		}
+
+
 
 .toolBar img {
 	width:35px;
