--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ html, body {
 	#tools ul,
 	#layers ul {
 		padding:0;
+		margin: 0;
 	}
 
 	#tools ul li,
@@ -52,6 +53,11 @@ html, body {
 #layers {
 	float: right;
 	width: 233px;
+
+	margin-right: 7px;
+
+	max-height: 392px;
+	overflow-y:auto;
 }
 
 	#layers ul li {
